--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <table cellspacing="20">
       <tr>
-        <td><img src="images/georgi-circle.png" width="200px" height="200px" alt="Georgi's photo."/></td>
+        <td><img src="georgi-circle.png" width="200px" height="200px" alt="Georgi's photo."/></td>
         <td><h1>Georgi Stoyanov</h1>
           <p><em>Future Web developer</em></p>
           <p>I love sports, expecially <strong>football</strong>.
